--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "passport": "^0.4.0",
     "pug": "^2.0.3"
   }
 }
