--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
+    "http": "0.0.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   }
 }
